[workspace]

members = [
    "crates/db_anything",
    "crates/providers",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "53", feature = "prettyprint" }
async-stream = { version = "0.3.5" }
async-trait = "0.1.85"
bb8 = { version = "0.8" }
bb8-postgres = { version = "0.8" }
chrono = "0.4"
clap = { version = "4.3.19", features = ["derive"]}
datafusion = "44.0.0"
datafusion-postgres = { git = "https://github.com/sunng87/datafusion-postgres.git", rev = "4888ffa9c8fc6f39496e80988ff90ee7c210ab50" }
datafusion-table-providers = { version = "=0.2.4", features = ["postgres"]}
futures = "0.3.30"
itertools = "0.13"
lazy_static= "1.4"
log = "0.4"
object_store = { version = "0.11", features = ["aws", "http"] }
pgwire = "0.28.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
regex = "1.5"
schemars = "0.8.22"
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12.0"
snafu = "0.8.3"
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-postgres = { version = "0.7.10", features = [ "with-chrono-0_4", "with-uuid-1", "with-serde_json-1", "with-geo-types-0_7"]}
tokio-util = { version = "0.7.13", features = ["full"] }
url = "2.2"

providers = { path = "./crates/providers" }
